[Freesome] Draft pages

--- a/Freesome/Pages/Index.razor
+++ b/Freesome/Pages/Index.razor
@@ -6,4 +6,4 @@
 
 <h1>Community News</h1>
 
-<iframe src="https://seekingmate.github.io/SeekingMate/" title="Freesome Online News" style="height: 100%"></iframe>
+<iframe src="https://seekingmate.github.io/SeekingMate/" title="Freesome Online News" style="height: 120em; height: 100%"></iframe>
