--- a/Freesome/Shared/NavMenu.razor
+++ b/Freesome/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href=""> <small>Born Out of Desire</small></a>
+        <a class="navbar-brand" href="">Freesome <small>Born Out of Desire</small></a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,32 +15,32 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Account
+            <NavLink class="nav-link" href="account">
+                <span class="oi oi-info" aria-hidden="true"></span> Account
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Profile
+            <NavLink class="nav-link" href="profile">
+                <span class="oi oi-map" aria-hidden="true"></span> Profile
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="enroll">
                 <span class="oi oi-plus" aria-hidden="true"></span> Enroll
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="achievements">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Achievements
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="rewards">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Rewards
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="settings">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
