--- a/Freesome/Shared/NavMenu.razor
+++ b/Freesome/Shared/NavMenu.razor
@@ -35,8 +35,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="rewards">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Rewards
+            <NavLink class="nav-link" href="awards">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Awards
             </NavLink>
         </div>
         <div class="nav-item px-3">
