--- a/Freesome/_Imports.razor
+++ b/Freesome/_Imports.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using FreesomeShared
 @using Freesome
 @using Freesome.Shared
 @using Freesome.Data
