--- a/Freesome/Pages/Account.razor
+++ b/Freesome/Pages/Account.razor
@@ -1,7 +1,19 @@
 ﻿@page "/account"
-@inject ApplicationData Data
+@inject ClientData Data
 
 <h1>Account</h1>
 
+<ul>
+    <li>Registered user since (DATE)</li>
+    <li>Current Hotel Rating: (HOTEL LEVEL)</li>
+    <li>Total Donation: (AMOUNT)</li>
+</ul>
+
+<Button Color="Color.Danger" Clicked="@OnButtonClicked">Destroy Account</Button>
+
 @code {
+    void OnButtonClicked()
+    {
+        return;
+    }
 }
