--- a/Freesome/Shared/MainLayout.razor
+++ b/Freesome/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@inject ApplicationData Data
+@inject ClientData Data
 
 @if (Data.LoginCredential != null)
 {
@@ -28,8 +28,19 @@ else
             <h3>Born Out of Desire</h3>
             <div>
                 <h5>Login</h5>
-                <p>Phone Number: <TextEdit @bind-Text="@Number"/></p>
+                <p>Access Code: <TextEdit @bind-Text="@AccessCode" /></p>
+                <p>Passphrase: <TextEdit @bind-Text="@Passphrase"/></p>
                 <Button Color="Color.Primary" Clicked="@OnButtonClicked">Login</Button>
+            </div>
+            <div>
+                <h3>How it Works?</h3>
+                <p>
+                    <ul>
+                        <li>Login using your unique combination of Access Code and Passphrase to access the service - there is no need for registration</li>
+                        <li>If the hotel funds are exhausted, even if it's a successful match, since we cannot book the hotel for you, you won't be able to proceed to mating😢</li>
+                        <li>This service is completely free of charge and the hotel fund is managed by Seeking Mate Funds Management Ltd. The size of this fund shows the mutual support and care of this community</li>
+                    </ul>
+                </p>
             </div>
         </article>
     </main>
@@ -37,19 +48,20 @@ else
 }
 
 @code{
-    private string Number;
+    private string AccessCode;
+    private string Passphrase;
     async protected override Task OnInitializedAsync()
     {
         Data.LoginCredential = await SecureStorage.Default.GetAsync(nameof(Data.LoginCredential)) ?? string.Empty;
         Data.Nickname = await SecureStorage.Default.GetAsync(nameof(Data.Nickname)) ?? string.Empty;
         Data.Gender = await SecureStorage.Default.GetAsync(nameof(Data.Gender)) ?? string.Empty;
-        Data.Age = int.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Age)) ?? string.Empty);
+        Data.Age = int.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Age)) ?? "18");
         Data.Ethinity = await SecureStorage.Default.GetAsync(nameof(Data.Ethinity)) ?? string.Empty;
-        Data.Weight = float.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Weight)) ?? string.Empty);
-        Data.Height = float.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Height)) ?? string.Empty);
+        Data.Weight = float.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Weight)) ?? "50");
+        Data.Height = float.Parse(await SecureStorage.Default.GetAsync(nameof(Data.Height)) ?? "50");
         Data.Profession = await SecureStorage.Default.GetAsync(nameof(Data.Profession)) ?? string.Empty;
         Data.MostActiveRegion = await SecureStorage.Default.GetAsync(nameof(Data.MostActiveRegion)) ?? string.Empty;
-        Data.ProfileColor = await SecureStorage.Default.GetAsync(nameof(Data.ProfileColor)) ?? string.Empty;
+        Data.ProfileColor = await SecureStorage.Default.GetAsync(nameof(Data.ProfileColor)) ?? null;
         Data.BloodTestAvailability = await SecureStorage.Default.GetAsync(nameof(Data.BloodTestAvailability)) ?? string.Empty;
         await base.OnInitializedAsync();
     }
