--- a/Freesome/Shared/MainLayout.razor
+++ b/Freesome/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject ClientData Data
 
-@if (Data.LoginCredential != null)
+@if (!string.IsNullOrEmpty(Data.LoginCredential))
 {
 <div class="page">
     <div style="background-image:none;background-color:lightgreen;" class="sidebar">
@@ -30,7 +30,7 @@ else
                 <h5>Login</h5>
                 <p>Access Code: <TextEdit @bind-Text="@AccessCode" /></p>
                 <p>Passphrase: <TextEdit @bind-Text="@Passphrase"/></p>
-                <Button Color="Color.Primary" Clicked="@OnButtonClicked">Login</Button>
+                <Button Color="Color.Primary" Clicked="@OnLoginButtonClicked">Login</Button>
             </div>
             <div>
                 <h3>How it Works?</h3>
@@ -65,9 +65,9 @@ else
         Data.BloodTestAvailability = await SecureStorage.Default.GetAsync(nameof(Data.BloodTestAvailability)) ?? string.Empty;
         await base.OnInitializedAsync();
     }
-    async void OnButtonClicked()
+    void OnLoginButtonClicked()
     {
         Data.LoginCredential = null;
-        await SecureStorage.Default.SetAsync(nameof(Data.LoginCredential), Data.LoginCredential.ToString());
+        SecureStorage.Default.Remove(nameof(Data.LoginCredential));
     }
 }
